syntax = "proto3";

package gitaly;

option go_package = "gitlab.com/gitlab-org/gitaly/proto/go/gitalypb";

import "shared.proto";

service StorageService {
  rpc DeleteAllRepositories(DeleteAllRepositoriesRequest) returns (DeleteAllRepositoriesResponse) {
    option (op_type) = {
      op: MUTATOR,
      scope_level: STORAGE,
    };
  }
}

message DeleteAllRepositoriesRequest {
  string storage_name = 1;
}

message DeleteAllRepositoriesResponse {}
